--- a/PCGToVST.vcxproj.filters
+++ b/PCGToVST.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="pcg_converter_effects.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="unit_tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="alchemist.h">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="helpers.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="unit_tests.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
